# ibkr-web-api

./: .env.settings  .gitignore  LICENSE.txt  README.md  config.yml  pyproject.toml
.github/workflows/: build-windows-exe.yml  ci.yml  lint-and-test.yml
app/: __init__.py  app_factory.py  cli_args.py  config.yml  main.py  run_server.py  settings.py
app/api/: __init__.py  hist_mkt_data.py
app/ib/: __init__.py  ib_client_manager.py
app/utils/: __init__.py  files.py
config/: pyinstaller.spec
scripts/: build_exe.bat
tests/: test_app_factory.py  test_cli_args.py  test_config.yml  test_main.py  test_settings.py
tests/api/: conftest.py  test_hist_market_data.py
tests/ib/: test_ib_client_manager.py
tests/utils/: test_files.py
